fix(verifiers): close compensation catalog review gaps
- verify package checksums through the shared reader
- classify domain failures explicitly
- retain checkpoints when effect analysis is incomplete
- serialize on-demand writers across local JVMs
- document hard-crash and distributed-lock limitations